File apps/ledger-live-mobile/src/locales/en/common.json was translated to ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -414,8 +414,8 @@
       "title" : "Указанная макс. комиссия слишком мала. Подписание операции может занять длительное время"
     },
     "NetworkDown" : {
-      "title" : "Похоже, не работает Интернет",
-      "description" : "Пожалуйста, проверьте подключение к Интернету."
+      "title" : "Похоже, отсутствует подключение",
+      "description" : "Попробуйте проверить подключение к интернету."
     },
     "NoAddressesFound" : {
       "title" : "К сожалению, счетов не обнаружено",
@@ -1206,7 +1206,7 @@
       "restoreDevice" : {
         "label" : "Восстановление устройства",
         "subTitle" : "Ввести фразу восстановления на новом устройстве",
-        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano!"
+        "desc" : "Воспользуйтесь мнемонической фразой, чтобы восстановить приватные ключи на новом Nano."
       },
       "recovery" : "Есть фраза восстановления?"
     },
@@ -1903,13 +1903,13 @@
       "desc" : "Просто отправьте криптоактивы получателю и дождитесь синхронизации приложения."
     },
     "carousel" : {
-      "title" : "То, что нужно"
+      "title" : "Специально для вас"
     },
     "recommended" : {
       "title" : "Рекомендуем"
     },
     "topGainers" : {
-      "title" : "Самые прибыльные (24Ч)",
+      "title" : "Прибыльные (24Ч)",
       "seeMarket" : "Просмотреть все"
     },
     "walletBalance" : "Баланс кошелька",
@@ -1978,7 +1978,7 @@
       "CREATE" : "Создано",
       "REVEAL" : "Раскрытие",
       "DELEGATE" : "Делегирование",
-      "UNDELEGATE" : "Отзыв",
+      "UNDELEGATE" : "Отозвано",
       "REDELEGATE" : "Переделегирование",
       "VOTE" : "Голосование",
       "FREEZE" : "Заморозка",
@@ -2090,11 +2090,11 @@
       "moreInfo" : "Подробнее...",
       "cardTitle" : "Powered by {{team}}",
       "drawer" : {
-        "title" : "Интеграция {{family}}",
-        "subTitle" : "Интеграция {{family}} выполнена командой {{team}}",
+        "title" : "Интеграция c {{family}}",
+        "subTitle" : "Интеграция c {{family}} выполнена командой {{team}}",
         "description" : "Ledger Live – это платформа с открытым исходным кодом.",
-        "description2" : "Разработчики из любой точки мира могут интегрироваться в наше приложение Ledger Live",
-        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger"
+        "description2" : "Разработчики из любой точки мира могут интегрировать своё приложение в Ledger Live.",
+        "description3" : "Эта интеграция проведена {{team}} в сотрудничестве с Ledger."
       }
     },
     "tokens" : {
@@ -2152,11 +2152,11 @@
       "advancedLogs" : "Расширенные логи",
       "accountName" : {
         "title" : "Название счёта",
-        "desc" : "Опишите счёт",
+        "desc" : "Введите описание для счёта.",
         "placeholder" : "Введите название"
       },
       "accountUnits" : {
-        "title" : "Ред. единицы учёта"
+        "title" : "Выбор единицы учёта"
       },
       "unit" : {
         "title" : "Единица учёта",
@@ -2253,7 +2253,7 @@
         "description" : "Вам нужно немного {{currencyTicker}}, чтобы {{actionName}} с помощью этого счёта."
       }
     },
-    "earn" : "Растите",
+    "earn" : "Приумножение",
     "quickActions" : "Быстрые действия",
     "banner" : {
       "redelegation" : {
@@ -2466,7 +2466,7 @@
         "goToSettings" : "Перейдите в настройки системы"
       },
       "allowed" : {
-        "title" : "Допуск уведомлений",
+        "title" : "Уведомления",
         "desc" : "Получайте уведомления о криптоактивах, ситуации на рынке и не только"
       },
       "transactions" : {
@@ -2489,7 +2489,7 @@
         "title" : "Уведомления о курсах",
         "desc" : "Настраивайте оповещения о курсах любимых криптовалют, чтобы не пропустить движения рынка"
       },
-      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся нашим партнёрам."
+      "disclaimer" : "Конфиденциальность данных — главный приоритет для Ledger. Поэтому собранная информация никогда не передаётся сторонним операторам услуг."
     },
     "help" : {
       "title" : "Помощь",
@@ -2504,12 +2504,12 @@
       "clearCacheModal" : "Вы уверены?",
       "clearCacheModalDesc" : "Мы проведём полное сканирование транзакций в сети. История счетов будет восстановлена, а средства на балансе будут пересчитаны.",
       "clearCacheButton" : "Очистить",
-      "exportLogs" : "Сохранение логов",
+      "exportLogs" : "Сохранить логи",
       "exportLogsDesc" : "Сохранённые логи Ledger Live могут потребоваться для устранения неполадок.",
       "resetThirdPartyData" : "Сброс данных посредников",
       "resetThirdPartyDataDesc" : "Удалите все данные посредников, использованные для доступа к сторонним поставщикам услуг.",
       "resetThirdPartyDataModal" : "Удаление данных посредников",
-      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам наших партнёров, вам может потребоваться заново пройти KYC и/или авторизоваться.",
+      "resetThirdPartyDataModalDesc" : "Удалите данные посредников. Чтобы получить доступ к услугам сторонних операторов, может потребоваться заново пройти KYC и/или авторизоваться.",
       "hardReset" : "Сброс Ledger Live",
       "hardResetDesc" : "Это действие не затрагивает активы и позволяет удалить все данные в Ledger Live, включая данные счетов, историю транзакций и настройки. Используйте устройство Ledger для перезагрузки криптоактивов и управления ими в Ledger Live с исходными настройками.",
       "repairDevice" : "Ремонт устройства Ledger",
@@ -2635,7 +2635,7 @@
     },
     "receive" : {
       "title" : "Получить",
-      "description" : "Получайте криптовалюту из других кошельков.",
+      "description" : "Получайте криптовалюту с других кошельков.",
       "titleReadOnly" : "Не утверждённый адрес",
       "headerTitle" : "Криптоактив",
       "titleDevice" : "Добавление устройства",
@@ -2678,12 +2678,12 @@
       "receiveConfirmation" : {
         "title" : "Получить {{currencyTicker}}",
         "addressVerified" : "Адрес подтверждён",
-        "verifyAddress" : "Нажмите здесь для подтверждения адреса",
-        "adviceVerify" : "Мы рекомендуем подтверждать адрес с помощью устройства Ledger",
+        "verifyAddress" : "Нажмите сюда для подтверждения адреса",
+        "adviceVerify" : "Мы рекомендуем подтверждать адрес на устройстве Ledger",
         "sendWarning" : "Отправляйте на этот адрес исключительно {{currencyName}} ({{currencyTicker}}). Любые другие криптоактивы могут быть потеряны навсегда."
       },
       "securityVerify" : {
-        "title" : "Из соображений безопасности мы рекомендуем подтвердить этот адрес с помощью устройства Ledger.",
+        "title" : "Для безопасности мы рекомендуем подтвердить этот адрес на устройстве Ledger.",
         "subtitle1" : "Подтверждение адреса необходимо для безопасности криптоактивов. Помните, что адрес на экране устройства Ledger подделать невозможно.",
         "subtitle2" : "Подтверждение адреса позволяет убедиться, что адрес на экране вашего устройства Ledger совпадает с адресом, который отображается в Ledger Live.",
         "verifyCta" : "Подтвердить адрес",
@@ -2721,18 +2721,18 @@
     },
     "buy" : {
       "title" : "Покупка",
-      "description" : "Покупайте криптовалюту за наличные безопасно."
+      "description" : "Безопасно покупайте криптовалюту за фиат."
     },
     "sell" : {
       "title" : "Продажа",
-      "description" : "Продавайте криптовалюту за наличные безопасно."
+      "description" : "Безопасно продавайте криптовалюту за фиат."
     },
     "exchange" : {
       "title" : "Покупка/Продажа"
     },
     "swap" : {
       "title" : "Обмен",
-      "description" : "Обменивайте криптовалюты.",
+      "description" : "Обменивайте один криптоактив на другой.",
       "selectDevice" : "Выберите устройство",
       "broadcasting" : "Транслируем обменную операцию",
       "loadingFees" : "Загружаем комиссию сети...",
@@ -2748,7 +2748,7 @@
         "bannerCTA" : "Сбросить KYC"
       },
       "main" : {
-        "header" : "Обмен криптоактивов"
+        "header" : "Обмен"
       },
       "kyc" : {
         "disclaimer" : "Я даю согласие на передачу данных о моём местоположении третьим лицам в целях соблюдения комплаенса.",
@@ -3314,7 +3314,7 @@
     },
     "info" : {
       "maxSpendable" : {
-        "title" : "Сколько можно отправить",
+        "title" : "Вы можете отправить",
         "description" : "Максимальная расходуемая сумма — это баланс средств на счету, которые можно отправить."
       }
     }
@@ -3588,7 +3588,7 @@
       "title" : "Подключение по Bluetooth...",
       "label" : "Автоматически определять Nano"
     },
-    "deviceNotFoundPairNewDevice" : "Подключите посредством Bluetooth",
+    "deviceNotFoundPairNewDevice" : "Подключить по Bluetooth",
     "headerDescription" : "Обязательно разблокируйте {{productName}} и включите Bluetooth",
     "usb" : "...или USB-кабеля",
     "usbLabel" : "Подключите кабель и введите ПИН-код на устройстве",
@@ -3852,8 +3852,8 @@
       "default" : "По умолчанию",
       "name_asc" : "Название А-Я",
       "name_desc" : "Название Я-А",
-      "marketcap_desc" : "Рын. капитализация",
-      "marketcap" : "Рын. капитализация",
+      "marketcap_desc" : "Капитализация",
+      "marketcap" : "Капитализация",
       "name" : "Название"
     }
   },
@@ -3957,7 +3957,7 @@
     }
   },
   "deviceLocalization" : {
-    "language" : "Язык интерфейса",
+    "language" : "Язык устройства",
     "deviceLanguage" : "Язык устройства",
     "chooseLanguage" : "Выберите язык для {{deviceName}}.",
     "changeLanguage" : "Поменять язык",
@@ -5167,8 +5167,8 @@
       "selectAccount" : "Выберите счёт",
       "wantToBuy" : "Я покупаю",
       "connectDevice" : "Подключите устройство",
-      "title" : "Покупайте криптовалюту через партнёра",
-      "coinifyTitle" : "Покупайте криптовалюту через партнёра",
+      "title" : "Покупка криптовалюты через сторонних операторов",
+      "coinifyTitle" : "Покупка криптовалюты через сторонних операторов",
       "description" : "Приобретайте криптовалюты через Coinify и получайте их прямо на счёт в Ledger.",
       "CTAButton" : "Купить",
       "emptyState" : {
@@ -5195,7 +5195,7 @@
       "selectAccount" : "Выберите счёт",
       "wantToSell" : "Я продаю",
       "connectDevice" : "Подключите устройство",
-      "title" : "Продавайте криптовалюту через партнёра",
+      "title" : "Продажа криптовалюты через сторонних операторов",
       "description" : "Продавайте криптовалюту прямо со счёта в Ledger посредством Coinify и получайте фиатные деньги на банковский счёт.",
       "CTAButton" : "Продать",
       "emptyState" : {
@@ -5218,7 +5218,7 @@
     },
     "swap" : {
       "title" : "ОБМЕН КРИПТОВАЛЮТ",
-      "description" : "Обменивайте криптоактивы непосредственно на счетах в Ledger благодаря нашему партнёру."
+      "description" : "Обменивать криптоактивы можно непосредственно на счетах Ledger через сторонних операторов."
     }
   },
   "walletconnect" : {
@@ -5334,13 +5334,13 @@
         "liveCompatible_label" : "Только с поддержкой Live"
       },
       "order" : {
-        "topGainers" : "Самые прибыльные",
+        "topGainers" : "Прибыльные",
         "market_cap" : "Рейтинг",
         "market_cap_asc" : "Капитализация возр.",
         "market_cap_desc" : "Капитализация убыв."
       },
       "currency" : "Валюта",
-      "time" : "Время",
+      "time" : "Период",
       "apply" : "Применить"
     },
     "marketList" : {
@@ -5502,7 +5502,7 @@
     },
     "walletCard" : {
       "title" : "Начало работы",
-      "description" : "Нажмите здесь, чтобы завершить настройку {{productName}} в Ledger Live"
+      "description" : "Нажмите сюда для завершения настройки {{productName}} в Ledger Live"
     },
     "actions" : {
       "customImage" : {
