LLM - Feat/LIVE-5016 - Newfeed page (#2570)
* Add Newsfeed page and explore tab navigator
* Add FormatRelativeTime date formatter, using Intl.RelativeTimeFormat and use it for newsfeed

---------

Co-authored-by: male-gal <maxence.le-gall@ledger.fr>

--- a/apps/ledger-live-mobile/src/locales/en/common.json
+++ b/apps/ledger-live-mobile/src/locales/en/common.json
@@ -87,7 +87,8 @@
     "popular": "popular",
     "getSupport": "Get support",
     "comingSoon": "Coming soon",
-    "restart": "Restart"
+    "restart": "Restart",
+    "loadMore": "Load more"
   },
   "errors": {
     "countervaluesUnavailable": {
@@ -1124,6 +1125,10 @@
       "learn": {
         "title": "Learn",
         "desc": "Learn about crypto, web3, digital security and more"
+      },
+      "news": {
+        "title": "News",
+        "desc": "Learn about crypto, security, web3 and catch up with latest news"
       },
       "ledgerApps": {
         "title": "Apps",
@@ -6098,5 +6103,10 @@
         "emptyPassword": "Password cannot be empty"
       }
     }
+  },
+  "newsfeed": {
+    "title": "Newsfeed",
+    "poweredByCryptopanic": "Powered by Cryptopanic",
+    "noPosts": "No posts available currently"
   }
 }
